--- a/shims/dataproc1421/driver/pom.xml
+++ b/shims/dataproc1421/driver/pom.xml
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>${dataproc.guava.version}</version>
+      <version>${guava.version}</version>
       <exclusions>
         <exclusion>
           <groupId>*</groupId>
