--- a/shims/hdp30/driver/pom.xml
+++ b/shims/hdp30/driver/pom.xml
@@ -48,6 +48,11 @@
 
     <org.apache.thrift.version>0.9.3</org.apache.thrift.version>
 
+    <!-- Guarantee the proper version for Jetty artifacts -->
+    <!-- Note the difference between \lib and \lib\client -->
+    <jetty.lib-folder.version>9.3.20.v20170531</jetty.lib-folder.version>
+    <jetty.client-folder.version>9.3.19.v20170502</jetty.client-folder.version>
+
   </properties>
 
   <dependencyManagement>
@@ -56,64 +61,64 @@
       <dependency>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-annotations</artifactId>
-        <version>${jetty.version}</version>
+        <version>${jetty.lib-folder.version}</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-client</artifactId>
-        <version>${jetty.version}</version>
+        <version>${jetty.lib-folder.version}</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-jaas</artifactId>
-        <version>${jetty.version}</version>
+        <version>${jetty.lib-folder.version}</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-jndi</artifactId>
-        <version>${jetty.version}</version>
+        <version>${jetty.lib-folder.version}</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-plus</artifactId>
-        <version>${jetty.version}</version>
+        <version>${jetty.lib-folder.version}</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-rewrite</artifactId>
-        <version>${jetty.version}</version>
+        <version>${jetty.lib-folder.version}</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-runner</artifactId>
-        <version>${jetty.version}</version>
+        <version>${jetty.lib-folder.version}</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-security</artifactId>
-        <version>${jetty.version}</version>
+        <version>${jetty.client-folder.version}</version>
       </dependency>
       <dependency>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-servlet</artifactId>
-        <version>${jetty.version}</version>
+        <version>${jetty.client-folder.version}</version>
       </dependency>
       <dependency>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-webapp</artifactId>
-        <version>${jetty.version}</version>
+        <version>${jetty.client-folder.version}</version>
       </dependency>
       <dependency>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-xml</artifactId>
-        <version>${jetty.version}</version>
+        <version>${jetty.client-folder.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
