--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
     <zookeeper.version>3.4.6.2.6.0.3-8</zookeeper.version>
     <maven-bundle-plugin.version>3.5.1</maven-bundle-plugin.version>
     <org.apache.hbase.thirdparty.version>2.1.0</org.apache.hbase.thirdparty.version>
+    <safeyaml.version>1.34.1</safeyaml.version>
   </properties>
 
   <dependencyManagement>
