--- a/shims/mapr61/driver/pom.xml
+++ b/shims/mapr61/driver/pom.xml
@@ -35,6 +35,17 @@
       <groupId>com.mapr.fs</groupId>
       <artifactId>mapr-hbase</artifactId>
       <version>${vendor.hbase.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.yaml</groupId>
+          <artifactId>snakeyaml</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.hitachivantara</groupId>
+      <artifactId>safeyaml</artifactId>
+      <version>${safeyaml.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.felix</groupId>
