--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
     <htrace-core.version>3.1.0-incubating</htrace-core.version>
     <zookeeper.version>3.4.6.2.6.0.3-8</zookeeper.version>
     <org.apache.hbase.thirdparty.version>2.1.0</org.apache.hbase.thirdparty.version>
+    <safeyaml.version>1.34.1</safeyaml.version>
   </properties>
 
   <dependencyManagement>
