--- a/shims/apache/driver/pom.xml
+++ b/shims/apache/driver/pom.xml
@@ -30,7 +30,6 @@
     <org.apache.orc.version>1.6.1</org.apache.orc.version>
     <parquet.version>1.11.1</parquet.version>
     <joda-time.version>2.9.9</joda-time.version>
-    <aws-java-sdk-core.version>1.11.275</aws-java-sdk-core.version>
     <org.apache.thrift.version>0.9.3</org.apache.thrift.version>
 
     <!-- Guarantee the proper version for Jetty artifacts -->
@@ -202,7 +201,7 @@
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-bundle</artifactId>
-      <version>${aws-java-sdk-core.version}</version>
+      <version>${aws-java-sdk.version}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.dataformat</groupId>
