--- a/shims/apache/driver/pom.xml
+++ b/shims/apache/driver/pom.xml
@@ -19,14 +19,14 @@
     <!-- default folder -->
     <failureaccess.version>1.0.1</failureaccess.version>
     <org.apache.avro.version>1.8.0</org.apache.avro.version>
-    <hadoop-aws.version>3.3.0</hadoop-aws.version>
+    <hadoop-aws.version>3.3.3</hadoop-aws.version>
     <!-- client and default folders -->
-    <hadoop.version>3.3.0</hadoop.version>
-    <gcs-connector.version>hadoop2-1.9.17</gcs-connector.version>
+    <hadoop.version>3.3.3</hadoop.version>
+    <gcs-connector.version>3.0.1</gcs-connector.version>
     <!-- pmr folder -->
     <commons-configuration.version>1.6</commons-configuration.version>
     <commons-configuration2.version>2.10.1</commons-configuration2.version>
-    <org.apache.hadoop.version>3.3.0</org.apache.hadoop.version>
+    <org.apache.hadoop.version>3.3.6</org.apache.hadoop.version>
     <org.apache.orc.version>1.6.1</org.apache.orc.version>
     <parquet.version>1.11.1</parquet.version>
     <joda-time.version>2.9.9</joda-time.version>
@@ -218,12 +218,12 @@
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-azure</artifactId>
-      <version>3.3.0</version>
+      <version>${org.apache.hadoop.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-azure-datalake</artifactId>
-      <version>3.3.0</version>
+      <version>${org.apache.hadoop.version}</version>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
