--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     <org.apache.hbase.version>1.4.8</org.apache.hbase.version>
     <shim-bundle-plugin.version>1.1</shim-bundle-plugin.version>
     <htrace-core.version>3.1.0-incubating</htrace-core.version>
-    <zookeeper.version>3.4.6.2.6.0.3-8</zookeeper.version>
+    <zookeeper.version>3.9.2</zookeeper.version>
     <org.apache.hbase.thirdparty.version>2.1.0</org.apache.hbase.thirdparty.version>
     <safeyaml.version>1.34.1</safeyaml.version>
   </properties>
