--- a/shims/apache/driver/pom.xml
+++ b/shims/apache/driver/pom.xml
@@ -127,12 +127,22 @@
           <groupId>org.codehaus.jettison</groupId>
           <artifactId>jettison</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-mapreduce-client-core</artifactId>
       <version>${org.apache.hadoop.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <!-- Dependency for hadoop-common-3.3.0 which causes bundle packaging issues -->
@@ -172,6 +182,10 @@
         <exclusion>
           <groupId>commons-net</groupId>
           <artifactId>commons-net</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
@@ -353,7 +367,8 @@
                 *:jersey*:jar:2.25.1,
                 *:*log4j*,*:xml-apis,*:xercesImpl,*:tests:*,
                 <!--Needed for hive-->
-                org.apache.hadoop:hadoop-yarn-registry,org.apache.velocity:velocity
+                org.apache.hadoop:hadoop-yarn-registry,org.apache.velocity:velocity,
+                com.fasterxml.jackson.core:jackson-databind
               </exclude>
               <transitive>true</transitive>
             </resolverFilter>
