--- a/common-fragment-V1/pom.xml
+++ b/common-fragment-V1/pom.xml
@@ -246,6 +246,9 @@
         <version>${shim-bundle-plugin.version}</version>
         <configuration>
           <resolverFilters>
+            <resolverFilter>
+              <exclude>com.fasterxml.jackson.core:jackson-databind</exclude>
+            </resolverFilter>
           </resolverFilters>
         </configuration>
         <executions>
