[PPP-5382] updated libthrift dependency to work with hive-exec version for CDP71; Updates to HDI40 and EMR700 for airCompressor vulnerability"

--- a/shims/apachevanilla/driver/pom.xml
+++ b/shims/apachevanilla/driver/pom.xml
@@ -455,6 +455,7 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <!-- Needed since we excluded it from hive-service to address io.airlift transitive security issue  -->
     <dependency>
       <groupId>org.apache.hive</groupId>
       <artifactId>hive-exec</artifactId>
