[PPP-5168] Vulnerable Component: Jackson ASL (Hadoop Vulnerable Component Only)

--- a/shims/apache/driver/pom.xml
+++ b/shims/apache/driver/pom.xml
@@ -347,6 +347,12 @@
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-azure</artifactId>
       <version>3.3.0</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.codehaus.jackson</groupId>
+          <artifactId>jackson-mapper-asl</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
